--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/persons.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/persons.jspx
@@ -110,6 +110,7 @@
 
 								<div class="text-center">
 									<form action="#">
+										<input type="hidden" name="ckey" value="${ckey}"/>								
 										<div class='input-group' style="margin-left: auto; width: 100%; margin-right: auto; ">
 											
 											<fmt:message key="person.index.placeholder" var="placeholderText"/>
@@ -129,6 +130,7 @@
 											<input type="hidden" name="personId" value=""/>
 											<input type="hidden" name='personRole' value='AUTHOR'/>
 											<input type="hidden" name='post.resource.entrytype' value='phdthesis'/>
+											<input type="hidden" name="ckey" value="${ckey}"/>
 											
 											<fmt:message key="persons.intro.addperson.text"/>
 											<fmt:message key="persons.intro.addperson.button" var="textAddPersonButton"/>
