--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -935,8 +935,12 @@ h1#pubtitle {
 }
 
 img.user-avatar {
-	width: 64px;
-	height: 64px;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 64px;
+	max-height: 64px;
+	text-align: center;
+	display: block;
 }
 
 a.img-thumbnail span {
