+school-field and default tag for new phdtheses added to persons

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/editGoldStandardPublication.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/editGoldStandardPublication.jspx
@@ -16,7 +16,7 @@
 		</jsp:attribute>
 
 		<jsp:attribute name="detailedInformation">
-			<editpub:details post="${command.post}" />
+			<editpub:details post="${command.post}" person="${command.person}" />
 		</jsp:attribute>
 
 		<jsp:attribute name="headerExtResource">
