--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/bibtex.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/bibtex.jspx
@@ -13,6 +13,7 @@
 	xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts"
 	xmlns:resources="urn:jsptagdir:/WEB-INF/tags/bstags/resources/common"
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
+	xmlns:bs="urn:jsptagdir:/WEB-INF/tags/bstags/layout/bootstrap"
 	xmlns:sidebar="urn:jsptagdir:/WEB-INF/tags/bstags/layout/sidebar"
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav">
 	
@@ -56,7 +57,7 @@
 			resource="${publication}"
 			discussionBox="${discussionBox}"
 			headline="${title}">
-				
+		
 		<jsp:attribute name="headerExt">
 			<script type="text/javascript" src="${resdir}/javascript/merged/bs/discussion.js"><!-- keep me --></script>
 			<script type="text/javascript" src="${resdir}/javascript/bs/publication.js"><!-- keep me --></script>
@@ -82,10 +83,7 @@
 			<parts:search pathMessageKey="navi.publication" formAction="/search" formInputName="search" formInputValue="${title}"/>
 		</jsp:attribute>
 		
-		
-		
 		<jsp:attribute name="content">
-			
 			<!-- COMMUNITY POST -->
 			<input id="publicInput" name="publicInput" value="${isPublic}" type="hidden" />
 			<c:choose>
@@ -97,14 +95,12 @@
 							<c:param name="editBeforeSaving" value="true" />
 						</c:url>
 						
-						<fmt:message key="actions.community_post.create" var="goldTitle" />
 						<h1 class="content-header"><c:out value="${pageTitle}" /></h1>
-						<div class="text-center">	
+						<div class="text-center">
 							<div class="lead">
 								<p><fmt:message key="actions.community_post.no" /></p> 
 							</div>
-							
-							<a class="btn btn-primary" href="${editGoldStandardLink}">${goldTitle}</a>
+							<bs:linkButton href="${editGoldStandardLink}" size="defaultSize" style="primary" textKey="actions.community_post.create" />
 							<hr />
 						</div>
 					<!-- invokes discussion forms -->
@@ -112,7 +108,6 @@
 						<discussion:discussion loginUser="${command.context.loginUser}" resource="${publication}" discussionItems="${command.discussionItems}"  postUserName="${command.postOwner}"/>
 					</c:if>
 					<input type="hidden" id="gs_present" value="${goldstandardPresent}"/>
-					
 				</c:when>
 			</c:choose>
 		</jsp:attribute>
@@ -121,7 +116,6 @@
 		    | sidebar
 		 	+-->
 		<jsp:attribute name="sidebar">
-		
 			<sidebar:sidebarTagCloudItem requPath="tag" cmd="${command.tagcloud}" tagboxMinfreqStyle="none" />
 
 			<!-- related users -->
@@ -162,8 +156,5 @@
 				</jsp:attribute>
 			</parts:infobox>
 		</jsp:attribute>
-
-		
 	</layout:resourceLayout>
-
 </jsp:root>
