--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/clipboard.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/clipboard.jspx
@@ -5,10 +5,8 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"
 	xmlns:layout="urn:jsptagdir:/WEB-INF/tags/bstags/layout"
-	xmlns:tags="urn:jsptagdir:/WEB-INF/tags/bstags/tags"
-	xmlns:users="urn:jsptagdir:/WEB-INF/tags/bstags/users"
+	xmlns:bs="urn:jsptagdir:/WEB-INF/tags/bstags/layout/bootstrap"
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
-	xmlns:button="urn:jsptagdir:/WEB-INF/tags/bstags/buttons"
 	xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts"
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
 	xmlns:sidebar="urn:jsptagdir:/WEB-INF/tags/bstags/layout/sidebar"
@@ -61,38 +59,20 @@
 					<!-- link-buttons on what you can do -->
 					<ul>
 						<li>
-						<!-- edit -->
-						<div class="form-group">
-							<fmt:message key="basket.edit.tags" var="editTags"/>
-							<button:linkButton name="linkButton" title="${fn:escapeXml(editTags)}" href="/beditbib/${fn:escapeXml(requPath)}">
-								<jsp:attribute name="text">
-									<fmt:message key="basket.editTags"/>
-								</jsp:attribute>
-							</button:linkButton>
-						</div>
-						
-						<!-- export -->
-			            <div class="form-group">
-				            <fmt:message key="basket.export" var="exportPosts"/>
-				          	<button:linkButton name="linkButton" title="${fn:escapeXml(exportPosts)}"
-				          		href="/export/${fn:escapeXml(requPath)}${requQueryString}">
-								<jsp:attribute name="text">
-									<fmt:message key="basket.exportPosts"/>
-								</jsp:attribute>
-							</button:linkButton>
-			            </div>
-			            
-			            <!-- remove -->
-			            <div class="form-group">
-				            <fmt:message key="basket.removeAllVerbose" var="removeAllVerbose"/>
-				          	<button:linkButton name="linkButton" title="${fn:escapeXml(removeAllVerbose)}"
-				          		href="/ajax/pickUnpickPost?action=clearAll&amp;ckey=${mtl:encodeURI(command.context.ckey)}">
-								<jsp:attribute name="text">
-									<fmt:message key="basket.removeAll" />
-								</jsp:attribute>
-							</button:linkButton>
-						</div>
-			          </li>
+							<!-- edit -->
+							<div class="form-group">
+								<bs:linkButton style="primary" href="/beditbib/${requPath}" size="defaultSize" block="${true}" textKey="basket.editTags" titleKey="basket.edit.tags" />
+							</div>
+							
+							<!-- export -->
+							<div class="form-group">
+								<bs:linkButton style="primary" href="/export/${requPath}${requQueryString}" size="defaultSize" block="${true}" textKey="basket.exportPosts" titleKey="basket.export" />
+							</div>
+							<!-- remove -->
+							<div class="form-group">
+								<bs:linkButton style="primary" href="/ajax/pickUnpickPost?action=clearAll&amp;ckey=${mtl:encodeURI(command.context.ckey)}" size="defaultSize" block="${true}" textKey="basket.removeAll" titleKey="basket.removeAllVerbose" />
+							</div>
+						</li>
 					</ul>
 				</jsp:attribute>
 			</parts:infobox>
