--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/inbox.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/inbox.jspx
@@ -5,14 +5,10 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"
 	xmlns:layout="urn:jsptagdir:/WEB-INF/tags/bstags/layout"
-	xmlns:tags="urn:jsptagdir:/WEB-INF/tags/bstags/tags"
-	xmlns:users="urn:jsptagdir:/WEB-INF/tags/bstags/users"
-	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
-	xmlns:button="urn:jsptagdir:/WEB-INF/tags/bstags/buttons"
+	xmlns:bs="urn:jsptagdir:/WEB-INF/tags/bstags/layout/bootstrap"
 	xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts"
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav">
-	
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
 	
@@ -48,28 +44,22 @@
 					</fmt:message>
 				</jsp:attribute>
 			</parts:infobox>
-         </jsp:attribute>
-
+		</jsp:attribute>
+		
 		<!--+
 			| sidebar
 			+-->
 		<jsp:attribute name="sidebar">
 			<li style="text-align: center;">
-       			<c:url var="message_remove" value="/removeMessage">
+				<c:url var="message_remove" value="/removeMessage">
 					<c:param name="hash" value=""/>
 					<c:param name="user" value=""/>
 					<c:param name="ckey" value="${ckey}"/>
 					<c:param name="clear" value="true"/>
 				</c:url>
-				<fmt:message var="removeTitle" key="inbox.actions.removeAllMessages.title"/>
-					
-				<button:linkButton name="linkButton" title="${removeTitle}" href="${fn:escapeXml(message_remove)}">
-					<jsp:attribute name="text">
-						<fmt:message key="inbox.actions.removeAllMessages"/>
-					</jsp:attribute>
-				</button:linkButton>
-          	</li>	
+				
+				<bs:linkButton style="primary" href="${message_remove}" size="defaultSize" block="${true}" textKey="inbox.actions.removeAllMessages" titleKey="inbox.actions.removeAllMessages.title" />
+			</li>
 		</jsp:attribute>
-		
 	</layout:resourceLayout>
 </jsp:root>
